--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: "welcome"
+author: "bv-ram"
+email: "ramanjaneyulu.b@hng.co.in"
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
