--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
-title: welcome
+
+title: "Welcome to my blog"
+date: 2022-08-25
 author: bv-ram
 email: bonthuramu444@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
